Working hamburger menu / side nav. Need to fix its visibility

--- a/src/app/components/shared/navbar/navbar.component.sass
+++ b/src/app/components/shared/navbar/navbar.component.sass
@@ -18,3 +18,31 @@ nav a
 
 .bi
   font-size: 1.5rem
+
+
+.menu-button
+  margin-right: 24px
+  min-width: 0
+  padding: 0
+  line-height: normal
+
+.app-title
+  padding: 0 3px
+
+  .sidenav-container
+    z-index: -1
+  flex: 1
+
+.sidenav
+  height: 100vh
+  width: 50vw
+
+a
+  display: block
+  padding: 6px 24px
+  width: 100%
+  text-align: left
+  z-index: -1
+
+main
+  padding: 18px 24px
